--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "material-design-icons-iconfont": "^6.7.0",
     "vue": "^2.7.7",
     "vue-router": "^3.6.5",
-    "vuetify": "^2.6.15"
+    "vuetify": "^2.6.15",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@mdi/font": "^7.2.96",
